--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Commands\AwardBadge.cs" />
     <Compile Include="Commands\CreateAvatar.cs" />
     <Compile Include="Commands\CreateBadge.cs" />
+    <Compile Include="Commands\DeleteForumUser.cs" />
+    <Compile Include="Commands\DeleteOrganizationUser.cs" />
     <Compile Include="Commands\ForumModerated.cs" />
     <Compile Include="Commands\RejectComment.cs" />
     <Compile Include="Commands\RejectPost.cs" />
@@ -87,6 +89,8 @@
     <Compile Include="Processors\ApprovePostProcessor.cs" />
     <Compile Include="Processors\CreateAvatarProcessor.cs" />
     <Compile Include="Processors\CreateBadgeProcessor.cs" />
+    <Compile Include="Processors\DeleteForumUserProcessor.cs" />
+    <Compile Include="Processors\DeleteOrganizationUser.cs" />
     <Compile Include="Processors\RejectCommentProcessor.cs" />
     <Compile Include="Processors\RejectPostProcessor.cs" />
     <Compile Include="Processors\SetForumThemeProcessor.cs" />
