--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Commands\AwardBadge.cs" />
     <Compile Include="Commands\CreateAvatar.cs" />
     <Compile Include="Commands\CreateBadge.cs" />
+    <Compile Include="Commands\DeleteAvatar.cs" />
     <Compile Include="Commands\DeleteForumUser.cs" />
     <Compile Include="Commands\DeleteOrganizationUser.cs" />
     <Compile Include="Commands\ForumModerated.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Processors\ApprovePostProcessor.cs" />
     <Compile Include="Processors\CreateAvatarProcessor.cs" />
     <Compile Include="Processors\CreateBadgeProcessor.cs" />
+    <Compile Include="Processors\DeleteAvatarProcessor.cs" />
     <Compile Include="Processors\DeleteForumUserProcessor.cs" />
     <Compile Include="Processors\DeleteOrganizationUser.cs" />
     <Compile Include="Processors\RejectCommentProcessor.cs" />
