--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -166,27 +166,27 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Themes\default\images\arrow-090-medium.png" />
-    <Content Include="Themes\default\images\arrow-090-small.png" />
-    <Content Include="Themes\default\images\arrow-090.png" />
-    <Content Include="Themes\default\images\arrow-270-medium.png" />
-    <Content Include="Themes\default\images\arrow-270-small.png" />
-    <Content Include="Themes\default\images\arrow-270.png" />
-    <Content Include="Themes\default\images\balloon-white.png" />
-    <Content Include="Themes\default\images\exclamation-white.png" />
-    <Content Include="Themes\default\scripts\bootstrap-alerts.js" />
-    <Content Include="Themes\default\scripts\bootstrap-buttons.js" />
-    <Content Include="Themes\default\scripts\bootstrap-dropdown.js" />
-    <Content Include="Themes\default\scripts\bootstrap-modal.js" />
-    <Content Include="Themes\default\scripts\bootstrap-popover.js" />
-    <Content Include="Themes\default\scripts\bootstrap-scrollspy.js" />
-    <Content Include="Themes\default\scripts\bootstrap-tabs.js" />
-    <Content Include="Themes\default\scripts\bootstrap-twipsy.js" />
-    <Content Include="Themes\default\scripts\jqcloud-0.2.8.js" />
-    <Content Include="Themes\default\scripts\jqcloud-0.2.8.min.js" />
-    <Content Include="Themes\default\styles\bootstrap.css" />
-    <Content Include="Themes\default\styles\custom.css" />
-    <Content Include="Themes\default\styles\jqcloud.css" />
+    <Content Include="Content\images\arrow-090-medium.png" />
+    <Content Include="Content\images\arrow-090-small.png" />
+    <Content Include="Content\images\arrow-090.png" />
+    <Content Include="Content\images\arrow-270-medium.png" />
+    <Content Include="Content\images\arrow-270-small.png" />
+    <Content Include="Content\images\arrow-270.png" />
+    <Content Include="Content\images\balloon-white.png" />
+    <Content Include="Content\images\exclamation-white.png" />
+    <Content Include="Content\scripts\bootstrap-alerts.js" />
+    <Content Include="Content\scripts\bootstrap-buttons.js" />
+    <Content Include="Content\scripts\bootstrap-dropdown.js" />
+    <Content Include="Content\scripts\bootstrap-modal.js" />
+    <Content Include="Content\scripts\bootstrap-popover.js" />
+    <Content Include="Content\scripts\bootstrap-scrollspy.js" />
+    <Content Include="Content\scripts\bootstrap-tabs.js" />
+    <Content Include="Content\scripts\bootstrap-twipsy.js" />
+    <Content Include="Content\scripts\jqcloud-0.2.8.js" />
+    <Content Include="Content\scripts\jqcloud-0.2.8.min.js" />
+    <Content Include="Content\styles\bootstrap.css" />
+    <Content Include="Content\styles\custom.css" />
+    <Content Include="Content\styles\jqcloud.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -299,7 +299,6 @@
     <Content Include="Views\Shared\Layout\Scripts.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\Badge.cshtml" />
-    <Content Include="Views\Shared\Layout\SideBar\Categories.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\NewPost.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\Tags.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\TopUsers.cshtml" />
@@ -319,6 +318,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Account\Register.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\Layout\SideBar\Categories.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
