--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -289,7 +289,6 @@
     <Content Include="Views\PostListing\All.cshtml" />
     <Content Include="Views\PostListing\Controversial.cshtml" />
     <Content Include="Views\PostListing\Popular.cshtml" />
-    <Content Include="Views\Post\Create.cshtml" />
     <Content Include="Views\Post\Detail.cshtml" />
     <Content Include="Views\Profile\All.cshtml" />
     <Content Include="Views\Profile\Badges.cshtml" />
@@ -301,7 +300,6 @@
     <Content Include="Views\Shared\Layout\Scripts.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\Badge.cshtml" />
-    <Content Include="Views\Shared\Layout\SideBar\NewPost.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\Tags.cshtml" />
     <Content Include="Views\Shared\Layout\SideBar\TopUsers.cshtml" />
     <Content Include="Views\Shared\Layout\Styles.cshtml" />
@@ -326,6 +324,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Layout\SignIn.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\Layout\SideBar\NewPost.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
