--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Commands\ActivateContent.cs" />
     <Compile Include="Commands\ActivateForumUser.cs" />
     <Compile Include="Commands\ActivateOrganizationUser.cs" />
+    <Compile Include="Commands\AddForumUserAsFriend.cs" />
     <Compile Include="Commands\ApproveComment.cs" />
     <Compile Include="Commands\ApprovePost.cs" />
     <Compile Include="Commands\AwardBadge.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Commands\MarkPostAsFavorite.cs" />
     <Compile Include="Commands\RejectComment.cs" />
     <Compile Include="Commands\RejectPost.cs" />
+    <Compile Include="Commands\RemoveForumUserFriend.cs" />
     <Compile Include="Commands\SetForumTheme.cs" />
     <Compile Include="Commands\UpdateAvatar.cs" />
     <Compile Include="Commands\UpdateBadge.cs" />
@@ -87,6 +89,7 @@
     <Compile Include="Processors\ActivateBadgeProcessor.cs" />
     <Compile Include="Processors\ActivateForumUserProcessor.cs" />
     <Compile Include="Processors\ActivateOrganizationUserProcessor.cs" />
+    <Compile Include="Processors\AddForumUserAsFriendProcessor.cs" />
     <Compile Include="Processors\ApproveCommentProcessor.cs" />
     <Compile Include="Processors\ApprovePostProcessor.cs" />
     <Compile Include="Processors\CreateAvatarProcessor.cs" />
@@ -96,6 +99,7 @@
     <Compile Include="Processors\MarkPostAsFavoriteProcessor.cs" />
     <Compile Include="Processors\RejectCommentProcessor.cs" />
     <Compile Include="Processors\RejectPostProcessor.cs" />
+    <Compile Include="Processors\RemoveForumUserFriendProcessor.cs" />
     <Compile Include="Processors\SetForumThemeProcessor.cs" />
     <Compile Include="Processors\ActivateCategoryProcessor.cs" />
     <Compile Include="Processors\ActivateContentProcessor.cs" />
@@ -156,6 +160,7 @@
     <Compile Include="ReadModels\ForumTheme.cs" />
     <Compile Include="ReadModels\ForumUserAction.cs" />
     <Compile Include="ReadModels\ForumUserFavorite.cs" />
+    <Compile Include="ReadModels\ForumUserFriend.cs" />
     <Compile Include="ReadModels\ForumUsers.cs" />
     <Compile Include="ReadModels\ForumVotingScheme.cs" />
     <Compile Include="ReadModels\ModeratedComment.cs" />
