refactored how common forum information is obtained and accessed. this still needs some work but it's getting better.

--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Controllers\PostListingController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\TagController.cs" />
+    <Compile Include="ForumTenantDescriptor.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
