--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -6,7 +6,13 @@
 <configuration>
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+		<section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" />
 	</configSections>
+	<razor>
+		<assemblies>
+			<add assembly="Euclid.Framework" />
+		</assemblies>
+	</razor>
 	<connectionStrings>
 		<add name="forum-db" connectionString="{override me}" />
 	</connectionStrings>
@@ -51,6 +57,9 @@
 		<modules runAllManagedModulesForAllRequests="true">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
 		</modules>
+		<handlers>
+			<add name="Nancy" verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*"/>
+		</handlers>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
