--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -172,30 +172,30 @@
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\images\star-empty.png" />
-    <Content Include="Content\images\star.png" />
+    <Content Include="Content\themes\default\images\star-empty.png" />
+    <Content Include="Content\themes\default\images\star.png" />
     <Content Include="Global.asax" />
-    <Content Include="Content\images\arrow-090-medium.png" />
-    <Content Include="Content\images\arrow-090-small.png" />
-    <Content Include="Content\images\arrow-090.png" />
-    <Content Include="Content\images\arrow-270-medium.png" />
-    <Content Include="Content\images\arrow-270-small.png" />
-    <Content Include="Content\images\arrow-270.png" />
-    <Content Include="Content\images\balloon-white.png" />
-    <Content Include="Content\images\exclamation-white.png" />
-    <Content Include="Content\scripts\bootstrap-alerts.js" />
-    <Content Include="Content\scripts\bootstrap-buttons.js" />
-    <Content Include="Content\scripts\bootstrap-dropdown.js" />
-    <Content Include="Content\scripts\bootstrap-modal.js" />
-    <Content Include="Content\scripts\bootstrap-popover.js" />
-    <Content Include="Content\scripts\bootstrap-scrollspy.js" />
-    <Content Include="Content\scripts\bootstrap-tabs.js" />
-    <Content Include="Content\scripts\bootstrap-twipsy.js" />
-    <Content Include="Content\scripts\jqcloud-0.2.8.js" />
-    <Content Include="Content\scripts\jqcloud-0.2.8.min.js" />
-    <Content Include="Content\styles\bootstrap.css" />
-    <Content Include="Content\styles\custom.css" />
-    <Content Include="Content\styles\jqcloud.css" />
+    <Content Include="Content\themes\default\images\arrow-090-medium.png" />
+    <Content Include="Content\themes\default\images\arrow-090-small.png" />
+    <Content Include="Content\themes\default\images\arrow-090.png" />
+    <Content Include="Content\themes\default\images\arrow-270-medium.png" />
+    <Content Include="Content\themes\default\images\arrow-270-small.png" />
+    <Content Include="Content\themes\default\images\arrow-270.png" />
+    <Content Include="Content\themes\default\images\balloon-white.png" />
+    <Content Include="Content\themes\default\images\exclamation-white.png" />
+    <Content Include="Content\themes\default\scripts\bootstrap-alerts.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-buttons.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-dropdown.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-modal.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-popover.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-scrollspy.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-tabs.js" />
+    <Content Include="Content\themes\default\scripts\bootstrap-twipsy.js" />
+    <Content Include="Content\themes\default\scripts\jqcloud-0.2.8.js" />
+    <Content Include="Content\themes\default\scripts\jqcloud-0.2.8.min.js" />
+    <Content Include="Content\themes\default\styles\bootstrap.css" />
+    <Content Include="Content\themes\default\styles\custom.css" />
+    <Content Include="Content\themes\default\styles\jqcloud.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -337,6 +337,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Post\NewComment.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\Layout\CustomContent.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
