execute query and get json results

--- a/src/sdk/JsonCompositeInspector/JsonCompositeInspector.csproj
+++ b/src/sdk/JsonCompositeInspector/JsonCompositeInspector.csproj
@@ -122,6 +122,23 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\Scripts\euclid.js" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\jquery-ui-1.8.16.custom.min.js" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_glass_75_dadada_1x400.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-icons_222222_256x240.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-icons_2e83ff_256x240.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-icons_454545_256x240.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-icons_888888_256x240.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\images\ui-icons_cd0a0a_256x240.png" />
+    <EmbeddedResource Include="Assets\Styles\smoothness\jquery-ui-1.8.16.custom.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
