added tag management to admin and agent

--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\AvailableContentType.cs" />
     <Compile Include="Controllers\AvatarController.cs" />
+    <Compile Include="Controllers\TagController.cs" />
     <Compile Include="Extensions\FilterContextExtensions.cs" />
     <Compile Include="Controllers\BadgeController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
@@ -167,6 +168,9 @@
     <Compile Include="Models\ApproveCommentInputModel.cs" />
     <Compile Include="Models\ApprovePostInputModel.cs" />
     <Compile Include="Models\BlockUserInputModel.cs" />
+    <Compile Include="Models\ActivateTagInputModel.cs" />
+    <Compile Include="Models\UpdateTagInputModel.cs" />
+    <Compile Include="Models\CreateTagInputModel.cs" />
     <Compile Include="Models\DeleteAvatarInputModel.cs" />
     <Compile Include="Models\DeleteContentInputModel.cs" />
     <Compile Include="Models\DeleteForumUserInputModel.cs" />
@@ -624,6 +628,15 @@
     <Content Include="Config\jason-mbp.custom.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tag\_NewTag.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tag\List.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Tag\_UpdateTag.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
