--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -8,8 +8,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
   <connectionStrings>
-    <add name="forum-db" connectionString="{override me}" />
-  </connectionStrings>
+		<add name="forum-db" connectionString="Server=tcp:sa9ipor2qq.database.windows.net;Database=ForumDb;User ID=forum@sa9ipor2qq;Password=NewCo1234;Trusted_Connection=False;Encrypt=True;" />
+	</connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
@@ -19,6 +19,7 @@
     <add key="RouteDebugger:Enabled" value="false" />
   </appSettings>
   <system.web>
+		<customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -67,7 +68,7 @@
     <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
       <bufferSize value="1" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString value="{override me}" />
+      <connectionString value="Server=tcp:sa9ipor2qq.database.windows.net;Database=ForumDb;User ID=forum@sa9ipor2qq;Password=NewCo1234;Trusted_Connection=False;Encrypt=True;" />
       <commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Forum Composite')" />
       <parameter>
         <parameterName value="@log_date" />
