--- a/src/sdk/AzureAgentConsole/app.config
+++ b/src/sdk/AzureAgentConsole/app.config
@@ -1,79 +1,73 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=152368
-  -->
 <configuration>
 	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
 	</configSections>
+	<startup useLegacyV2RuntimeActivationPolicy="true">
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+	</startup>
 	<connectionStrings>
 		<add name="forum-db" connectionString="Server=tcp:sa9ipor2qq.database.windows.net;Database=ForumDb;User ID=forum@sa9ipor2qq;Password=NewCo1234;Trusted_Connection=False;Encrypt=True;" />
 	</connectionStrings>
 	<appSettings>
-		<add key="webpages:Version" value="1.0.0.0" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
-		<add key="log4net.Internal.Debug" value="false" />
+		<add key="log4net.Internal.Debug" value="false"/>
 	</appSettings>
-	<system.web>
-		<customErrors mode="Off"/>
-		<compilation debug="true" targetFramework="4.0">
-			<assemblies>
-				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-			</assemblies>
-		</compilation>
-		<authentication mode="Forms">
-			<forms 
-				name="AdminCompositeAuth"
-				loginUrl="~/Authentication/Signin" 
-				timeout="2880" />
-		</authentication>
-		<httpRuntime requestValidationMode="2.0" />
-		<pages
-			validateRequest="false">
-			<namespaces>
-				<add namespace="System.Web.Helpers" />
-				<add namespace="System.Web.Mvc" />
-				<add namespace="System.Web.Mvc.Ajax" />
-				<add namespace="System.Web.Mvc.Html" />
-				<add namespace="System.Web.Routing" />
-				<add namespace="System.Web.WebPages" />
-			</namespaces>
-		</pages>
-		<trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
-	</system.web>
-	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true">
-			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
-		</modules>
-	</system.webServer>
+	<system.data>
+		<DbProviderFactories>
+			<remove invariant="System.Data.SQLite" />
+			<add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+		</DbProviderFactories>
+	</system.data>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+				<assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-3.2.0.4000" newVersion="3.2.0.4000" />
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+
 	<log4net>
+
 		<root>
-			<priority value="INFO" />
+			<priority value="DEBUG"/>
 			<appender-ref ref="AdoNetAppender" />
 		</root>
+
 		<logger name="NHibernate">
 			<level value="ERROR" />
 		</logger>
+
+		<appender name="Console" type="log4net.Appender.ColoredConsoleAppender">
+			<mapping>
+				<level value="ERROR" />
+				<foreColor value="White" />
+				<backColor value="Red, HighIntensity" />
+			</mapping>
+			<mapping>
+				<level value="INFO" />
+				<foreColor value="Green" />
+			</mapping>
+
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%d{HH:mm:ss} [%4p] %.15c - %m%n" />
+			</layout>
+		</appender>
+
+		<appender name="File" type="log4net.Appender.FileAppender">
+			<file value="log.txt" />
+			<appendToFile value="true" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%d [%p] %c - %m%n" />
+			</layout>
+		</appender>
+
 		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
 			<bufferSize value="1" />
 			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
 			<connectionString value="Server=tcp:sa9ipor2qq.database.windows.net;Database=ForumDb;User ID=forum@sa9ipor2qq;Password=NewCo1234;Trusted_Connection=False;Encrypt=True;" />
-			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Admin Composite')" />
+			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Hosting Fabric')" />
 			<parameter>
 				<parameterName value="@log_date" />
 				<dbType value="DateTime" />
@@ -118,5 +112,6 @@
 				<layout type="log4net.Layout.ExceptionLayout" />
 			</parameter>
 		</appender>
+
 	</log4net>
 </configuration>
