turned debugging back down to INFO

--- a/src/sdk/AzureAgentConsole/app.config
+++ b/src/sdk/AzureAgentConsole/app.config
@@ -31,7 +31,7 @@
 	<log4net>
 
 		<root>
-			<priority value="DEBUG"/>
+			<priority value="INFO"/>
 			<appender-ref ref="AdoNetAppender" />
 		</root>
 
