--- a/apps/ForumComposite/ForumComposite.csproj
+++ b/apps/ForumComposite/ForumComposite.csproj
@@ -268,10 +268,6 @@
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\src\sdk\CompositeInspector\CompositeInspector.csproj">
-      <Project>{D1B6455D-9E83-423F-A8E0-82073D066846}</Project>
-      <Name>CompositeInspector</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\src\sdk\Euclid.Composites.Mvc\Euclid.Composites.Mvc.csproj">
       <Project>{F0842E3B-1F25-4D42-B25D-758B8FCBDCC3}</Project>
       <Name>Euclid.Composites.Mvc</Name>
@@ -279,6 +275,10 @@
     <ProjectReference Include="..\..\src\sdk\Euclid.Composites\Euclid.Composites.csproj">
       <Project>{12029AA6-F05C-4DC6-B76E-C3798BCAC68D}</Project>
       <Name>Euclid.Composites</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\sdk\JsonCompositeInspector\JsonCompositeInspector.csproj">
+      <Project>{7453ADF2-CE91-47BD-A046-003CCC90D962}</Project>
+      <Name>JsonCompositeInspector</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\src\sdk\LoggingAgent\LoggingAgent.csproj">
       <Project>{1FE538F6-D05D-4849-8741-F827F1B7B34F}</Project>
