--- a/src/sdk/JsonCompositeInspector/JsonCompositeInspector.csproj
+++ b/src/sdk/JsonCompositeInspector/JsonCompositeInspector.csproj
@@ -69,6 +69,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Module\AssetModule.cs" />
+    <Compile Include="Views\Commands\CommandNotFoundInRegistryException.cs" />
     <Compile Include="CompositeInspectorBootstrapper.cs" />
     <Compile Include="Models\AgentModel.cs" />
     <Compile Include="Models\AgentPartModel.cs" />
@@ -79,7 +81,8 @@
     <Compile Include="Module\CompositeModule.cs" />
     <Compile Include="Module\QueryModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Commands\Binders\InputModelBinder.cs" />
+    <Compile Include="Binders\InputModelBinder.cs" />
+    <Compile Include="ValueConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
