--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Commands\ApprovePost.cs" />
     <Compile Include="Commands\AwardBadge.cs" />
     <Compile Include="Commands\ActivateTag.cs" />
+    <Compile Include="Commands\ActivateStopWord.cs" />
     <Compile Include="Commands\CreateStopWord.cs" />
     <Compile Include="Commands\UpdateTag.cs" />
     <Compile Include="Commands\CreateTag.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="CommentNotFoundException.cs" />
     <Compile Include="ContentNotFoundException.cs" />
     <Compile Include="Processors\ActivateTagProcessor.cs" />
+    <Compile Include="Processors\ActivateStopWordProcessor.cs" />
     <Compile Include="Processors\CreateStopWordProcessor.cs" />
     <Compile Include="Queries\ProfanityFilterQueries.cs" />
     <Compile Include="ReadModels\AvailableStopWords.cs" />
