added ability to delete stop words

--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Models\BlockUserInputModel.cs" />
     <Compile Include="Models\ActivateTagInputModel.cs" />
     <Compile Include="Models\ActivateStopWordInputModel.cs" />
+    <Compile Include="Models\DeleteStopWordInputModel.cs" />
     <Compile Include="Models\CreateStopWordInputModel.cs" />
     <Compile Include="Models\UpdateTagInputModel.cs" />
     <Compile Include="Models\CreateTagInputModel.cs" />
