initial log viewer

--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -11,7 +11,13 @@
 	<razor>
 		<assemblies>
 			<add assembly="Euclid.Framework" />
+			<add assembly="LoggingAgent" />
+			<add assembly="Euclid.Framework.Models" />
+			<add assembly="Euclid.Common" />
 		</assemblies>
+		<namespaces>
+			<add namespace="LoggingAgent.ReadModels" />
+		</namespaces>
 	</razor>
 	<connectionStrings>
 		<add name="forum-db" connectionString="Server=tcp:sa9ipor2qq.database.windows.net;Database=ForumDb;User ID=forum@sa9ipor2qq;Password=NewCo1234;Trusted_Connection=False;Encrypt=True;" />
