start validating form fields based on query results

--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -61,7 +61,7 @@
 		<trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
 	</system.web>
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true">
+		<modules runAllManagedModulesForAllRequests="false">
 			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
 		</modules>
 		<handlers>
